--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -33,5 +34,5 @@ jobs:
           file: api/Dockerfile
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/plant-api:latest
-            ghcr.io/${{ github.repository_owner }}/plant-api:${{ github.sha }}
+            ghcr.io/anas-stack-ctrl/plant-api:latest
+            ghcr.io/anas-stack-ctrl/plant-api:${{ github.sha }}
